@@ -1,0 +1,1 @@
+cdecl @ /dev/null @ -xc++ @ explain static void f() const @ 65
